--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "store-admin",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://beta.deckbrew.xyz",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/material": "^5.9.1",
+    "@mui/styles": "^5.9.1",
+    "lodash.get": "^4.4.2",
+    "prop-types": "^15.8.1",
+    "query-string": "^7.1.1",
+    "ra-data-json-server": "^4.2.3",
     "react": "^18.2.0",
+    "react-admin": "^4.2.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
